refactor(dungeonmap): simplify canonical 2x primitives